push config.json

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.starter",
-	"appName": "TodoList",
+	"appName": "IMAGinDragons",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
