--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
         "@capacitor/haptics": "1.1.3",
         "@capacitor/keyboard": "1.2.0",
         "@capacitor/status-bar": "1.0.6",
+        "@ionic-native/core": "^5.36.0",
         "@ionic-native/media": "^5.36.0",
         "@ionic/angular": "^6.0.0",
         "cordova-plugin-media": "^5.0.4",
         "firebase": "^9.4.0",
+        "ionic": "^5.4.16",
         "rxfire": "^6.0.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.2.0",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~13.0.1",
+        "@angular-devkit/build-angular": "^13.2.6",
         "@angular-eslint/builder": "~13.0.1",
         "@angular-eslint/eslint-plugin": "~13.0.1",
         "@angular-eslint/eslint-plugin-template": "~13.0.1",
@@ -52,13 +54,20 @@
         "@types/node": "^12.11.1",
         "@typescript-eslint/eslint-plugin": "5.3.0",
         "@typescript-eslint/parser": "5.3.0",
+        "cordova-browser": "^6.0.0",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^5.0.0",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
         "eslint": "^7.6.0",
         "eslint-plugin-import": "2.22.1",
         "eslint-plugin-jsdoc": "30.7.6",
         "eslint-plugin-prefer-arrow": "1.2.2",
         "jasmine-core": "~3.8.0",
         "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~6.3.2",
+        "karma": "^6.3.17",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage": "~2.0.3",
         "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -68,5 +77,18 @@
         "ts-node": "~8.3.0",
         "typescript": "~4.4.4"
     },
-    "description": "An Ionic project"
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-media": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {}
+        },
+        "platforms": [
+            "browser"
+        ]
+    }
 }
