--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
         "@ionic-native/core": "^5.36.0",
         "@ionic-native/media": "^5.36.0",
         "@ionic/angular": "^6.0.0",
+        "assert": "^2.0.0",
+        "buffer": "^6.0.3",
         "cordova-plugin-media": "^5.0.4",
         "firebase": "^9.4.0",
         "ionic": "^5.4.16",
+        "music-metadata": "^7.12.2",
+        "process": "^0.11.10",
+        "readable-stream": "^3.6.0",
         "rxfire": "^6.0.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.2.0",
@@ -51,6 +56,8 @@
         "@ionic/angular-toolkit": "^5.0.0",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "~2.0.3",
+        "@types/jsmediatags": "^3.9.3",
+        "@types/musicmetadata": "^2.0.6",
         "@types/node": "^12.11.1",
         "@typescript-eslint/eslint-plugin": "5.3.0",
         "@typescript-eslint/parser": "5.3.0",
