--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "paths": {
+    "stream": [ "node_modules/readable-stream" ],
+    "assert": [ "node_modules/assert" ]
+
   }
 }
