--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@capacitor/core": "3.3.4",
         "@capacitor/haptics": "1.1.3",
         "@capacitor/keyboard": "1.2.0",
+        "@capacitor/motion": "^1.0.5",
         "@capacitor/status-bar": "1.0.6",
         "@ionic-native/core": "^5.36.0",
         "@ionic-native/media": "^5.36.0",
