fix pour la version prod et supprison des .log

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,9 +1,9 @@
 {
   "targets": {
-    "musicapp-45c98": {
+    "imagindragons-e576d": {
       "hosting": {
         "app": [
-          "musicapp-45c98"
+          "imagindragons-e576d"
         ]
       }
     }
